--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
           
           <script>
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbwXnqJFUA9V-FcmavEH713wc-ts3-CLTRtr0AOXsoSjAC-XGheWc9fjun2wXw5_ujwA/exec'
+            const scriptURL = 'https://script.google.com/a/macros/desapex.com/s/AKfycbzrilJDfMjD1Dw5nQJ7gOjuWE1Z2GYHRr9hsbnMzeVXuiJY56g9fkICxjQYvQbXbab2/exec'
             const form = document.forms['google-sheet']
           
             form.addEventListener('submit', e => {
