--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         </div>
           
           <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbwXnqJFUA9V-FcmavEH713wc-ts3-CLTRtr0AOXsoSjAC-XGheWc9fjun2wXw5_ujwA/exec'
             const form = document.forms['google-sheet']
           
             form.addEventListener('submit', e => {
@@ -112,60 +113,6 @@
                 .then(response => alert("Unsubscribing was successful!"))
                 .catch(error => console.error('Error!', error.message))
             })
-		  function doGet() {
-  // Enable CORS
-  var response = {
-    headers: {
-      'Content-Type': 'application/json',
-      'Access-Control-Allow-Origin': '*',
-      'Access-Control-Allow-Methods': 'GET, POST, OPTIONS',
-      'Access-Control-Allow-Headers': 'Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With'
-    },
-    statusCode: 200,
-    body: ''
-  };
-  return response;
-}var sheetName = 'Sheet1'
-		var scriptProp = PropertiesService.getScriptProperties()
-
-		function intialSetup () {
-		  var activeSpreadsheet = SpreadsheetApp.getActiveSpreadsheet()
-		  scriptProp.setProperty('key', activeSpreadsheet.getId())
-		}
-
-		function doPost (e) {
-		  var lock = LockService.getScriptLock()
-		  lock.tryLock(10000)
-
-		  try {
-			var doc = SpreadsheetApp.openById(scriptProp.getProperty('key'))
-			var sheet = doc.getSheetByName(sheetName)
-
-			var headers = sheet.getRange(1, 1, 1, sheet.getLastColumn()).getValues()[0]
-			var nextRow = sheet.getLastRow() + 1
-
-			var newRow = headers.map(function(header) {
-			  return header === 'timestamp' ? new Date() : e.parameter[header]
-			})
-
-			sheet.getRange(nextRow, 1, 1, newRow.length).setValues([newRow])
-
-			return ContentService
-			  .createTextOutput(JSON.stringify({ 'result': 'success', 'row': nextRow }))
-			  .setMimeType(ContentService.MimeType.JSON)
-		  }
-
-		  catch (e) {
-			return ContentService
-			  .createTextOutput(JSON.stringify({ 'result': 'error', 'error': e }))
-			  .setMimeType(ContentService.MimeType.JSON)
-		  }
-
-		  finally {
-			lock.releaseLock()
-		  }
-		}
-
           </script>
 
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
